; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_trinity_dpm.c_trinity_set_ss_dividers.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_trinity_dpm.c_trinity_set_ss_dividers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@TRINITY_SIZEOF_DPM_STATE_TABLE = common dso_local global i32 0, align 4
@SMU_SCLK_DPM_STATE_0_CNTL_1 = common dso_local global i32 0, align 4
@DS_SH_DIV_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.radeon_device*, i32, i32)* @trinity_set_ss_dividers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @trinity_set_ss_dividers(%struct.radeon_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.radeon_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @TRINITY_SIZEOF_DPM_STATE_TABLE, align 4
  %11 = mul nsw i32 %9, %10
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* @SMU_SCLK_DPM_STATE_0_CNTL_1, align 4
  %13 = load i32, i32* %8, align 4
  %14 = add nsw i32 %12, %13
  %15 = call i32 @RREG32_SMC(i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* @DS_SH_DIV_MASK, align 4
  %17 = xor i32 %16, -1
  %18 = load i32, i32* %7, align 4
  %19 = and i32 %18, %17
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @DS_SH_DIV(i32 %20)
  %22 = load i32, i32* %7, align 4
  %23 = or i32 %22, %21
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* @SMU_SCLK_DPM_STATE_0_CNTL_1, align 4
  %25 = load i32, i32* %8, align 4
  %26 = add nsw i32 %24, %25
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @WREG32_SMC(i32 %26, i32 %27)
  ret void
}

declare dso_local i32 @RREG32_SMC(i32) #1

declare dso_local i32 @DS_SH_DIV(i32) #1

declare dso_local i32 @WREG32_SMC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
